--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "340aafae-6fa1-4bc6-a081-becf0dca561f"
+      "id": "fa9a5b8c-9821-4db7-b89a-842e9a0b0a44"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "a71c7530-6a28-42b0-8a31-832b2612fc0b"
+      "id": "c03cb1dd-d5b3-4d9d-8eb5-38346b8cf47e"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "cc9fca19-4a6e-4490-b394-9de26ff4118d"
+      "id": "0399d996-7da0-4ae5-a766-8ded38efe3fd"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "6dfc7022-e6e8-42a0-8990-d33ee1dd3cc0"
+      "id": "22a22db0-307d-492d-a82f-814fc44933c5"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "1deede5b-158a-4f94-9db5-b847d61faa2f"
+      "id": "17770da2-b0cf-42a1-991b-e36caeb15a33"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "43615ef2-e3cc-425e-9646-e2c16b5b4043"
+      "id": "442fc35d-c7e1-4909-a5bb-336b56ad050a"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "bd20fe70-c4f1-4af4-952d-9f90ba36eb0c"
+      "id": "1a832fae-3a7c-47a4-99ef-f55437a90156"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "fbb9b8e8-cb4d-4c57-8076-0c982b309aff"
+      "id": "2ee4d36c-ea27-4832-a679-9667f52dba9b"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "4fe449b6-ec94-405d-b976-ec7953f25a9f"
+      "id": "21424b19-bda5-46da-8d04-4e9e7f50afcd"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "f268cf96-a3ca-4b43-bb11-e17e18ff3a2a"
+      "id": "420b16e8-1016-4f20-a6d4-b1dd8747d826"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "0c1ce195-d7f4-4ce5-816e-a23991e051ad"
+      "id": "a107cc5a-6f60-4f92-ac6f-4c721f647101"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "03f54484-2b95-4b4f-80b0-fb6ca1955bdc"
+      "id": "b802e8a4-a145-45af-8779-413637b648b4"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "435b7e18-b2de-42ab-b92a-2c1e29f05089"
+      "id": "23c40eda-84ec-48f6-a0b6-746812e21ebf"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "3add95ec-655f-4955-bc11-28f84d6ca138"
+      "id": "7c08c347-d8ac-487e-89df-04cb81e6d36b"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "d18fc652-40bf-4290-a5bf-0876bea3b1dd"
+      "id": "4af3f17f-31a2-46c4-84d1-129bfadf7fcd"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "08c937be-8ce9-4ecd-a18e-3392d2ff529b"
+      "id": "dbf528f9-3bce-4418-990b-70683dc0ca00"
     },
     {
       "cell_type": "code",
