--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "48e4fac7-36e0-4f27-85f4-81f43686cada"
+      "id": "2dbe8113-0607-4c99-90ea-8a96f365b985"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "9c974e87-1501-4c56-8acc-0d235652fecf"
+      "id": "33528afd-a444-42c1-81c5-f72ca80e2114"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "1524cc88-1ff7-4956-9781-845865809007"
+      "id": "dd18b72d-33b6-4621-af09-118cce3d1e9d"
     },
     {
       "cell_type": "code",
@@ -129,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "29351897-889f-49a4-b066-e6125d41a8f7"
+      "id": "2a63216d-115c-40ff-8112-44964eeffbf2"
     },
     {
       "cell_type": "code",
@@ -183,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "498ac6c4-5342-4beb-93d9-a023429bf126"
+      "id": "7f268a8d-1e7c-453f-a020-6ce7ea855a39"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "567116e4-2a4b-42a6-814c-29827c21855f"
+      "id": "bb104f2e-03b0-4b04-9e85-e96d6e96a3e9"
     },
     {
       "cell_type": "code",
@@ -286,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "45271bb2-2d5c-46d4-b56c-5c085e01c116"
+      "id": "680bb731-6296-495d-b5d2-b07419001022"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "dc917f2c-9688-4e50-b506-25793a5686d6"
+      "id": "e401c620-bde0-49d6-84f0-0d77a8854c65"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "bc6e9056-4d23-48ed-bc1d-71817090fd60"
+      "id": "b8ac9426-205c-4975-94bd-35ce8483547c"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "eaf4e2ac-5f6f-432f-9e11-2dc69fdc22d1"
+      "id": "2311657c-8158-4568-abf9-a3ed96cae08a"
     },
     {
       "cell_type": "code",
@@ -418,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "5e7c12ab-e79c-41d5-bf4c-4a08befc72e7"
+      "id": "accc2a52-69ce-4bf8-99a1-33fd6a0b4116"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "72761a09-4588-42aa-8bcd-ccf267a7feb4"
+      "id": "d2201709-984b-49c0-9575-fa30794ad4ac"
     },
     {
       "cell_type": "code",
@@ -491,71 +491,15 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix}\n",
-        "1.2200 & 0.4900 \\\\\n",
-        "1.1700 & 0.4400 \\\\\n",
-        "1.2100 & -0.4500 \\\\\n",
-        "1.2000 & -0.5000 \\\\\n",
-        "-1.2000 & 0.5100 \\\\\n",
-        "-1.2300 & 0.4800 \\\\\n",
-        "-1.2000 & -0.4800 \\\\\n",
-        "-1.1900 & -0.4900 \\\\\n",
-        "0.2000 & 0.0000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
-        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
-        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
-        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
-        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
-        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
-        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
-        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
-        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
-        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
-        "1.2100 \\\\\n",
-        "1.2500 \\\\\n",
-        "1.1000 \\\\\n",
-        "1.1100 \\\\\n",
-        "1.1200 \\\\\n",
-        "1.1300 \\\\\n",
-        "1.1400 \\\\\n",
-        "1.1200 \\\\\n",
-        "3.6000\n",
-        "\\end{bmatrix} +\\begin{bmatrix}\n",
-        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
-        "\\end{bmatrix}\\\\ \\\\\n",
-        "=~& \\begin{bmatrix}\n",
-        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
-        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
-        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
-        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
-        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
-        "\\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
-        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
-        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
-        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
-        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
-        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
-        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
-        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
-        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
-        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -572,7 +516,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "470eaebb-5fc8-45d8-bd9b-85c70f285992"
+      "id": "7cbc8e88-5e09-4eac-954f-32f130957192"
     },
     {
       "cell_type": "code",
@@ -692,7 +636,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "d41d6102-b303-4393-84c3-58f0989c7649"
+      "id": "94b4b16c-f1b2-460b-af3f-cf1713c92213"
     },
     {
       "cell_type": "code",
@@ -713,7 +657,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "ea191cd6-643e-495b-bb3e-83e080d1c043"
+      "id": "1364ba25-1c96-4268-a12f-037d9ecc2f1b"
     },
     {
       "cell_type": "code",
@@ -748,7 +692,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "806c1424-5810-47d5-85b2-ac372d3b78ed"
+      "id": "37f5a1cb-6cac-4efd-badd-157230af069e"
     },
     {
       "cell_type": "code",
@@ -800,7 +744,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "e077f8c6-1ec9-493c-9744-a4d20843813e"
+      "id": "1c7916b3-d41e-40f1-9758-186e02c93a10"
     },
     {
       "cell_type": "code",
@@ -825,7 +769,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "c6dbcf22-96e5-4789-93d9-fe3351531a7f"
+      "id": "787a51a1-1a0a-4ee2-b062-0fe69d12c60e"
     },
     {
       "cell_type": "code",
@@ -867,7 +811,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "3b01add2-977e-4e67-8139-ae4f850420ec"
+      "id": "b4df71c5-5c6c-48d2-a094-203a91f58e44"
     },
     {
       "cell_type": "code",
@@ -890,7 +834,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "056bdaeb-2879-4e94-ab87-8f5c39defed6"
+      "id": "2fbac820-c6de-4b2b-9876-89311f5cf891"
     },
     {
       "cell_type": "code",
@@ -922,7 +866,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "93d8438b-c36f-4d4f-8efd-5025f1d2a753"
+      "id": "d4846d2c-b3cb-43f0-b4dc-8807692fc304"
     },
     {
       "cell_type": "code",
@@ -942,7 +886,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "547f83f8-789f-4a24-ac5c-0e10723a548a"
+      "id": "49375943-22f9-4f42-be76-67df0ae80508"
     },
     {
       "cell_type": "code",
@@ -976,7 +920,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "5cd7ec65-4447-4b81-a452-886403333ef4"
+      "id": "78c3edd8-9e70-422a-93b0-9b5f0c0f1654"
     },
     {
       "cell_type": "code",
@@ -997,7 +941,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "7cc24349-2c51-487f-84a7-0812596ba029"
+      "id": "301d1f03-4f7e-4fce-b5f6-0fc848a6dc82"
     },
     {
       "cell_type": "code",
@@ -1029,7 +973,7 @@
       "source": [
         "(update)"
       ],
-      "id": "34439fb7-7a6c-44cd-a031-12a52831182c"
+      "id": "5afbfbb6-4f5d-440e-a00c-2de733f125fa"
     },
     {
       "cell_type": "code",
@@ -1049,7 +993,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "7a45ecdc-6884-465f-92fe-f29691bf924b"
+      "id": "00056d47-4cb0-4052-ab96-94a3027996f2"
     },
     {
       "cell_type": "code",
@@ -1081,7 +1025,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "488d5f8a-22f7-4adb-8ecb-14e0c32cb07b"
+      "id": "b6a03f0c-3bb1-4c53-bb86-c3c89dfa40fb"
     },
     {
       "cell_type": "code",
@@ -1101,7 +1045,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "01d9e3d9-6fce-489d-bc7e-2b0a9b12ef47"
+      "id": "fbf7059c-d4f0-46bf-b825-e5579eb25cac"
     },
     {
       "cell_type": "code",
@@ -1133,7 +1077,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "bf9a2584-b03b-4ff4-841e-587215e53f12"
+      "id": "1d127aeb-a491-4381-a390-5735a01b35ea"
     },
     {
       "cell_type": "code",
@@ -1199,7 +1143,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "658bc255-02eb-4c6d-9202-94fccacc4cde"
+      "id": "8e14101f-6fb3-4553-9d11-3a76ee9f4c4e"
     },
     {
       "cell_type": "code",
@@ -1236,7 +1180,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "cdee44d5-d4eb-4578-808c-fee09b5c7dec"
+      "id": "99c958a2-6b52-4087-a889-99bc7c2c6b64"
     },
     {
       "cell_type": "code",
@@ -1290,7 +1234,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "204fe367-2b40-4710-8a8f-43e5e76bc524"
+      "id": "496f55ae-d5d2-481a-a65e-36ce612231b1"
     },
     {
       "cell_type": "code",
@@ -1310,7 +1254,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "3d922f12-821e-40ce-8978-dabfa73f44cd"
+      "id": "41149b20-ef00-48da-b23c-76d9a75d84b3"
     },
     {
       "cell_type": "code",
@@ -1350,7 +1294,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "d8db058a-5dc9-4898-8278-1d86dc632878"
+      "id": "eab52118-2145-428d-8e34-e9ea6a3c8f92"
     },
     {
       "cell_type": "code",
@@ -1374,7 +1318,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "19fbcc5f-2575-4bd9-a5ac-9ad06a62e8fa"
+      "id": "9a8895e1-7d97-4413-88a1-2d7385e631e4"
     },
     {
       "cell_type": "code",
@@ -1428,7 +1372,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "6eccc9c0-28fb-43c9-9782-f5b29156d063"
+      "id": "1b414fc2-6a78-48b6-b583-e8ede32f2940"
     },
     {
       "cell_type": "code",
@@ -1449,7 +1393,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "9b4a1326-fc62-4188-975b-75512687bf60"
+      "id": "072451d8-93a7-4c96-8285-b62b81a5af7e"
     },
     {
       "cell_type": "code",
